[tool.poetry]
name = "repl_python3_SremBot"
version = "0.1.0"
description = ""
authors = ["Dzenan"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
ok = "^0.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
